<resources>
    <string name="app_name">Assignment_No_3_Android_User_Interface</string>
    <string name="answer">Answer</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="p">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="slash">/</string>
    <string name="Eq">=</string>
</resources>