<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetAQuestion3"
    android:gravity="center">

    <EditText
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autofillHints="phone"
         android:padding="20dp"
         android:inputType="text"
         android:hint="@string/answer" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/btn4"
        android:layout_below="@id/edit_text"
        android:layout_marginTop="20dp"
        android:text="@string/_1">
    </Button>
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignTop="@+id/btn1"
        android:layout_toStartOf="@+id/btn3"
        android:text="@string/_2">
    </Button>
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignTop="@+id/btn2"
        android:layout_centerHorizontal="true"
        android:text="@string/_3">
    </Button>
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_below="@id/btn1"
        android:layout_toStartOf="@id/btn2"
        android:text="@string/_4">
    </Button>
    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignBottom="@+id/btn4"
        android:layout_alignStart="@id/btn2"
        android:text="@string/_5">
    </Button>
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignStart="@+id/btn3"
        android:layout_below="@id/btn3"
        android:text="@string/_6">
    </Button>
    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/btn4"
        android:layout_below="@id/btn4"
        android:text="@string/_7">
    </Button>
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignStart="@+id/btn5"
        android:layout_alignEnd="@+id/btn5"
        android:layout_below="@id/btn5"
        android:text="@string/_8">
    </Button>
    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignStart="@+id/btn6"
        android:layout_below="@id/btn6"
        android:text="@string/_9">
    </Button>
    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/edit_text"
        android:layout_alignTop="@id/btn3"
        android:layout_marginStart="46dp"
        android:layout_toEndOf="@id/btn3"
        android:text="@string/p">
    </Button>
    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/add"
        android:layout_alignStart="@id/add"
        android:layout_below="@id/add"
        android:text="@string/minus">
    </Button>
    <Button
        android:id="@+id/multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@id/sub"
        android:layout_below="@id/sub"
        android:text="@string/multi">
    </Button>

    <Button
        android:id="@+id/btn10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn7"
        android:layout_toStartOf="@id/btn2"
        android:text="@string/dot">
    </Button>
    <Button
        android:id="@+id/btn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignStart="@+id/btn8"
        android:layout_below="@id/btn8"
        android:text="@string/_0">
    </Button>
    <Button
        android:id="@+id/btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignStart="@+id/btn9"
        android:layout_below="@id/btn9"
        android:text="@string/c">
    </Button>
    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/multi"
        android:layout_alignStart="@+id/multi"
        android:layout_below="@+id/multi"
        android:text="@string/slash">
    </Button>
    <Button
        android:id="@+id/isEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:layout_alignEnd="@+id/div"
        android:layout_alignStart="@+id/btn10"
        android:layout_below="@+id/btn11"
        android:layout_marginTop="20dp"
        android:text="@string/Eq">
    </Button>
</RelativeLayout>